# COMET-poly

./: .gitignore  README.md
comet/cli/: train.py
comet_multi_cand/: README.md  pyproject.toml
comet_multi_cand/comet_multi_cand/cli/: mbr.py  score.py  train.py
comet_multi_cand/comet_multi_cand/encoders/: base.py  bert.py  minilm.py  rembert.py  xlmr.py  xlmr_xl.py
comet_multi_cand/comet_multi_cand/models/: __init__.py  base.py  metrics.py
comet_multi_cand/configs/: finetuner100ep.yaml  trainer_double.yaml  trainer_half.yaml
comet_multi_cand/configs/experimental/: model_anchor.yaml  model_anchor_baseline.yaml  model_anchor_score.yaml  model_checkpoint_pairwise_difference.yaml  model_multicand_0t00s.yaml  model_multicand_1t00s.yaml  model_multicand_1t00s_nograd.yaml  model_multicand_1t01s.yaml  model_multicand_1t10s.yaml  model_multicand_2out.yaml  model_multicand_2t00.yaml  model_multicand_2t00s.yaml  model_multicand_2t02s.yaml  model_multicand_2t20s.yaml  model_multicand_3t00s.yaml  model_multicand_3t03s.yaml  model_multicand_3t30s.yaml  model_multicand_4t00s.yaml  model_multicand_4t04s.yaml  model_multicand_4t40s.yaml  model_multicand_5t00s.yaml  model_multicand_5t05s.yaml  model_multicand_5t50s.yaml  model_multicand_baseline.yaml  model_multicand_ref_0t00s.yaml  model_multicand_ref_1t00s.yaml  model_multicand_ref_1t01s.yaml  model_multicand_ref_1t10s.yaml  model_pairwise_referenceless.yaml  model_retrieval_1t_mt.yaml  model_retrieval_1t_src.yaml  multitask_model.yaml  pairwise_difference_model.yaml  pairwise_model.yaml
comet_multi_cand/configs/models/: ranking_model.yaml  referenceless_model.yaml  regression_model.yaml  unified_metric.yaml
comet_multi_cand/tests/unit/: test_cache.py  test_download_load.py  test_models_predict.py
comet_poly/: pyproject.toml
comet_poly/comet_poly/: knn_polycand.py  knn_polyic.py  retrieval.py
comet_poly/comet_poly/cli/: mbr.py  score.py  train.py
comet_poly/comet_poly/encoders/: base.py  bert.py  minilm.py  rembert.py  xlmr.py  xlmr_xl.py
comet_poly/comet_poly/models/: __init__.py  base.py  metrics.py
comet_poly/configs/: continue_trainer_half2ep.yaml  finetuner.yaml  trainer.yaml  trainer_double.yaml  trainer_half.yaml  trainer_half_cont1ep.yaml
comet_poly/configs/experimental/: early_stopping_multitask.yaml  model_checkpoint_multitask.yaml  model_checkpoint_pairwise.yaml  model_multitask.yaml  model_pairwise.yaml  model_pairwise_difference.yaml  model_pairwise_referenceless.yaml  model_polycand_0t00s.yaml  model_polycand_1t00s.yaml  model_polycand_1t00s_nograd.yaml  model_polycand_1t01s.yaml  model_polycand_1t10s.yaml  model_polycand_2t00s.yaml  model_polycand_2t02s.yaml  model_polycand_2t20s.yaml  model_polycand_3t00s.yaml  model_polycand_3t03s.yaml  model_polycand_3t30s.yaml  model_polycand_4t00s.yaml  model_polycand_4t04s.yaml  model_polycand_4t40s.yaml  model_polycand_5t00s.yaml  model_polycand_5t05s.yaml  model_polycand_5t50s.yaml  model_polycand_ref_0t00s.yaml  model_polycand_ref_1t00s.yaml  model_polycand_ref_1t01s.yaml  model_polycand_ref_1t10s.yaml  model_polyic_1t_mt.yaml  model_polyic_1t_src.yaml  model_polyic_1t_src_ref.yaml  model_polyic_3t_src.yaml
(+205 files in other folders)
