[tool.poetry]
name = "comet-poly"
version = "2.2.4"
description = "Early-Exit version of COMET, forked from Unababel/COMET"
authors = ["Ricardo Rei, Craig Stewart, Catarina Farinha, Alon Lavie"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zouharvi/COMET-poly"
keywords = [
    "Machine Translation", 
    "Evaluation",
    "Unbabel",
    "COMET"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "comet_poly"},
]
include = [
    "LICENSE",
    "pyproject.toml"
]

[tool.poetry.scripts]
comet-poly-train = 'comet_poly.cli.train:train_command'
comet-poly-score = 'comet_poly.cli.score:score_command'
comet-poly-compare = 'comet_poly.cli.compare:compare_command'
comet-poly-mbr = 'comet_poly.cli.mbr:mbr_command'

[tool.poetry.dependencies]
python = "^3.8.0"
sentencepiece = "^0.2.0"
pandas = ">=1.4.1"
transformers = "^4.17"
pytorch-lightning = "^2.0.0"
jsonargparse = "3.13.1"
torch = ">=1.6.0"
numpy = "^1.20.0"
torchmetrics = "^0.10.2"
sacrebleu = "^2.0.0"
scipy = "^1.5.4"
entmax = "^1.1"
huggingface-hub = ">=0.19.3,<1.0"
protobuf = "^4.24.4"
subset2evaluate = ">=1.0.8"

[tool.poetry.dev-dependencies]
sphinx-markdown-tables = "0.0.15"
coverage = "^5.5"
scikit-learn = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
